vercel file upload

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "vercel": "^30.2.1"
   }
 }
